fixing issue where icons placed in sidebar navigation did not align properly and hiding menu text did not work FIT-1531

--- a/themes/expressbase/scss/components/_menus.scss
+++ b/themes/expressbase/scss/components/_menus.scss
@@ -351,8 +351,13 @@
 }
 /* Menu Icons - for block menus, not main, secondary, footer menus */
 .menu-icon-text {
-  overflow: hidden;
-  display: block;
+  //overflow: hidden;
+  //display: block;
+}
+.hide-text {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
 }
 a.menu__link {
   display: block;
